XMLExper/m12/m12_444_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual tinyxml2::XMLNode* tinyxml2::XMLDeclaration::ShallowClone(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:1374:56: error: lvalue required as left operand of assignment
 1374 |         /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(doc) = _document;
      |                                                        ^~~~~~~~~
diff: tinyxml2.S: No such file or directory
